--- a/pp2.html
+++ b/pp2.html
@@ -272,7 +272,7 @@ html{
       <!-- <div id="menu-bar" class="fas fa-bars"></div> -->
   
       <nav class="navbar">
-          <a href="final-project-1.html">home</a>
+          <a href="index.html">home</a>
           <a href="#speciality">speciality</a>
           <a href="#popular">popular</a>
           <a href="#gallery">gallery</a>
