--- a/order.html
+++ b/order.html
@@ -269,7 +269,7 @@ header .icons #menu-bars{
         <!-- <div id="menu-bar" class="fas fa-bars"></div> -->
     
         <nav class="navbar">
-            <a href="final-project-1.html">home</a>
+            <a href="index.html">home</a>
             <a href="#speciality">speciality</a>
             <a href="#popular">popular</a>
             <a href="#gallery">gallery</a>
